Fixed z-index bug on section

--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -5,7 +5,6 @@
 
 main { 
     section {
-        z-index: -2;
         position: relative;
         .loginform {
             display: flex;
